--- a/todolist-app/package.json
+++ b/todolist-app/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://raisgood.github.io/todolist",
+    "homepage": "https://raisgood.github.io/todolist-app",
     "name": "todolist-app",
     "version": "0.1.0",
     "private": true,
